# flask-subscription-system

./: pyproject.toml  run.py  tt.txt
flask_subscription_system/: __init__.py  forms.py  models.py  routes.py  site.db
flask_subscription_system/templates/: blog_confirmation.html  confirm.html  feed_email.html  home.html  layout.html  post.html  register.html  subscription_confirmation.html  subscription_email.html
tests/: test_flask_subscription_system.py
