[tool.poetry]
name = "flask-subscription-system"
version = "0.1.0"
description = ""
authors = ["Hemanta Sharma <sharmahemanta.212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
